[gd_scene load_steps=3 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/PlayMenu.gd" type="Script" id=2]

[node name="PlayMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.137255, 0.168627, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.12549, 0.137255, 0.168627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -51.0
margin_right = 77.0
margin_bottom = 51.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 47.0
margin_top = 21.0
margin_right = 107.0
margin_bottom = 80.0
rect_min_size = Vector2( 60, 0 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_right = 60.0
margin_bottom = 13.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 60.0
margin_bottom = 36.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 60.0
margin_bottom = 59.0
text = "Salir"

[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/Close" to="." method="_on_Close_pressed"]
